# flecha

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/core/: CMakeLists.txt  Parser.cpp  Tokenizer.cpp
src/include/core/: AST.hpp  Parser.hpp  Token.hpp  TokenType.hpp  Tokenizer.hpp
src/memory/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/std/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_ast.cpp  test_tokenizer.cpp
src/utils/: CMakeLists.txt
